# table-diff-sample

./: Makefile  compose.yaml  package-lock.json  package.json
.storybook/: preview.ts
docker/mysql/: Dockerfile
docker/mysql/init.d/: tables.sql
src/: App.tsx  global.module.scss  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/group/: command.rs  db.rs  types.rs
src-tauri/src/relation/: command.rs  db.rs  mod.rs
src-tauri/src/user/: command.rs  db.rs  mod.rs  types.rs
src/component/: Links.tsx
src/component/group/edit/: GroupEdit.stories.tsx  GroupEdit.tsx
src/component/group/list/: GroupList.stories.tsx  GroupList.tsx
src/component/group/relation/: GroupRelation.stories.tsx  GroupRelation.tsx
src/component/user/edit/: UserEdit.stories.tsx  UserEdit.tsx
src/component/user/list/: UserList.stories.tsx  UserList.tsx
src/page/: GroupCreatePage.tsx  GroupListPage.tsx  GroupUpdatePage.tsx  RelationPage.tsx  TopPage.tsx  UserCreatePage.tsx  UserListPage.tsx  UserUpdatePage.tsx
